unpackaged/main/default/objects/HealthCloudGA__EhrImmunization__c/fields/Administered_by_Clinic__c.field-meta.xml
<CustomField>
    <fullName>Administered_by_Clinic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Administered by (Clinic)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Business</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Immunizations (Administered by (Clinic))</relationshipLabel>
    <relationshipName>Immunizations</relationshipName>
    <type>Lookup</type>
</CustomField>