unpackaged/main/default/objects/HealthCloudGA__EhrImmunization__c/fields/Administered_By_Physician__c.field-meta.xml
<CustomField>
    <fullName>Administered_By_Physician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Administered By (Physician)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Individual</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Immunizations</relationshipLabel>
    <relationshipName>Immunizations</relationshipName>
    <type>Lookup</type>
</CustomField>