unpackaged/main/default/objects/HealthCloudGA__EhrImmunization__c/fields/Date_Administered__c.field-meta.xml
<CustomField>
    <fullName>Date_Administered__c</fullName>
    <description>Date Only field to capture the date the Immunization was administered.</description>
    <label>Date Administered</label>
    <type>Date</type>
</CustomField>