unpackaged/main/default/objects/HealthCloudGA__EhrImmunization__c/fields/Immunization_Type__c.field-meta.xml
<CustomField>
    <fullName>Immunization_Type__c</fullName>
    <description>List from https://www.cdc.gov/vaccines/vpd/vaccines-list.html</description>
    <label>Immunization Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adenovirus</fullName>
            </value>
            <value>
                <fullName>Anthrax</fullName>
            </value>
            <value>
                <fullName>Cholera</fullName>
            </value>
            <value>
                <fullName>Diphtheria</fullName>
            </value>
            <value>
                <fullName>Haemophilus influenzae type b (Hib)</fullName>
            </value>
            <value>
                <fullName>Hepatitis A</fullName>
            </value>
            <value>
                <fullName>Hepatitis B</fullName>
            </value>
            <value>
                <fullName>Human Papillomavirus (HPV)</fullName>
            </value>
            <value>
                <fullName>Japanese Encephalitis</fullName>
            </value>
            <value>
                <fullName>Measles</fullName>
            </value>
            <value>
                <fullName>Meningococcal</fullName>
            </value>
            <value>
                <fullName>Mumps</fullName>
            </value>
            <value>
                <fullName>Pertussis</fullName>
            </value>
            <value>
                <fullName>Pneumococcal</fullName>
            </value>
            <value>
                <fullName>Polio</fullName>
            </value>
            <value>
                <fullName>Rabies</fullName>
            </value>
            <value>
                <fullName>Rotavirus</fullName>
            </value>
            <value>
                <fullName>Rubella</fullName>
            </value>
            <value>
                <fullName>Seasonal Influenza (Flu) only</fullName>
            </value>
            <value>
                <fullName>Shingles</fullName>
            </value>
            <value>
                <fullName>Smallpox</fullName>
            </value>
            <value>
                <fullName>Tetanus</fullName>
            </value>
            <value>
                <fullName>Tuberculosis</fullName>
            </value>
            <value>
                <fullName>Typhoid Fever</fullName>
            </value>
            <value>
                <fullName>Varicella</fullName>
            </value>
            <value>
                <fullName>Yellow Fever</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>